force-app/main/default/objects/MP_Subscription_Plan__c/MP_Subscription_Plan__c.object-meta.xml
<CustomObject>
    <description>MercadoPago subscription plans</description>
    <label>MP Subscription Plan</label>
    <nameField>
        <label>MP Subscription Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP Subscription Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>