force-app/main/default/objects/MP_Subscription_Plan__c/fields/MP_Collector_Id__c.field-meta.xml
<CustomField>
    <fullName>MP_Collector_Id__c</fullName>
    <label>MP Collector ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>