force-app/main/default/objects/MP_Subscription_Plan__c/fields/MP_Date_Created_DT__c.field-meta.xml
<CustomField>
    <fullName>MP_Date_Created_DT__c</fullName>
    <label>MP Date Created DT</label>
    <type>DateTime</type>
</CustomField>