force-app/main/default/objects/MP_Subscription_Plan__c/fields/MP_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>MP_Last_Modified__c</fullName>
    <label>MP Last Modified</label>
    <length>40</length>
    <type>Text</type>
</CustomField>