force-app/main/default/objects/MP_Subscription_Plan__c/fields/MP_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>MP_Plan_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>MP Plan ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>