force-app/main/default/objects/MP_Subscription_Plan__c/fields/MP_Total_Installments__c.field-meta.xml
<CustomField>
    <fullName>MP_Total_Installments__c</fullName>
    <label>MP Total Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>